--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,20 @@
-.attribution { font-size: 11px; text-align: center; }
+.attribution { font-size: 11px; text-align: center; position: absolute; bottom: 0; left: 50%; transform: translate(-50%, 0);}
 .attribution a { color: hsl(228, 45%, 44%); }
+
+/* GENERAL STYLES AND CONTAINERS */ 
+:root {
+  --linear-gradient: linear-gradient(hsl(249, 99%, 64%), hsl(278, 94%, 30%)); /* (active input border) */ 
+  --red: hsl(0, 100%, 66%); /* (input errors) */ 
+  --white: hsl(0, 0%, 100%);
+  --light-grayish-violet: hsl(270, 3%, 87%);
+  --dark-grayish-violet: hsl(279, 6%, 55%);
+  --very-dark-violet: hsl(278, 68%, 11%);
+}
+
+* {
+  font-family: 'Space Grotesk', sans-serif;
+  font-size: 1.125rem; /* 18px */
+}
 
 body {
   display: grid;
@@ -9,60 +24,113 @@ body {
   margin: 0;
 }
 
-.left-bg {
+.left-col {
   border: 1px solid black;
 }
 
-.container {
+.right-col {
   border: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+
+
+/* CREDIT CARDS */ 
 .card {
   position: absolute;
   bottom: 0;
 }
 
+
+
+/* FORM */ 
 form {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  width: 380px;
+  /* grid-template-rows: 1fr 1fr 1fr 1fr; */ 
+  width: 380px; /* 23.75rem; 380px */
 }
 
-.form-box-1 {
+.form-el {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-name {
   grid-column: 1 / 3;
 }
-.form-box-2 {
+.form-number {
   grid-column: 1 / 3;
 }
-.form-box-3 {
+.form-date {
   grid-column: 1 / 2;
 }
-.form-box-4 {
+.form-cvc {
   grid-column: 2 / 3;
 }
 
 #name, #cardnumber {
-  width: 100%;
-  border: 1px solid black;
-  padding: 0;
+  /*width: 100%;
+  padding: 0;*/
 }
 .exp-date {
   width: 40%;
 }
 #cvc {
-  width: 96%;
+  /*width: 96%;*/
 }
+
 button {
   width: 380px;
   padding: 0;
   grid-column: 1 / 3;
   border: none;
+  height: 48px;
+  border-radius: 8px;
+  background: var(--very-dark-violet);
+  color: var(--white);
+  margin-top: 10px;
 }
 
 .form-completed {
   display: none;
+}
+
+input {
+  border: 1px solid var(--dark-grayish-violet);
+  box-sizing: border-box; /* so the input box width stays inside the parent element */ 
+  width: 100%;
+  margin: 7px 0 30px 0;
+  border-radius: 8px;
+  padding: 10px 20px;
+  color: var(--very-dark-violet);
+}
+
+label {
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 2px;
+  color: var(--very-dark-violet);
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+
+
+
+/* Media Queries */ 
+@media only screen and (min-width: 1440px) {
+  
 }
