--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-.attribution { font-size: 11px; text-align: center; position: absolute; bottom: 0; left: 50%; transform: translate(-50%, 0);}
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution { font-size: 11px !important; text-align: center; position: absolute; bottom: 0; left: 50%; transform: translate(-50%, 0);}
+.attribution a { color: hsl(228, 45%, 44%); font-size: 12px !important;}
 
 /* GENERAL STYLES AND CONTAINERS */ 
 :root {
@@ -25,11 +25,11 @@ body {
 }
 
 .left-col {
-  border: 1px solid black;
+  background: url(../images/bg-main-desktop.png);
+  background-size: cover;
 }
 
 .right-col {
-  border: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -40,8 +40,82 @@ body {
 /* CREDIT CARDS */ 
 .card {
   position: absolute;
-  bottom: 0;
+  border-radius: 10px;
 }
+
+.card-front {
+  background: url(../images/bg-card-front.png);
+  background-size: cover;
+  top: 22%;
+  left: 10%;
+  padding: 30px 35px;
+  width: 400px;
+  height: 190px;
+}
+
+.card-back {
+  background: url(../images/bg-card-back.png);
+  background-size: cover;
+  top: 52%;
+  left: 15%;
+  padding: 0;
+  width: 470px;
+  height: 250px;
+}
+
+p {
+  color: var(--white);
+}
+
+p.cc-number {
+  font-size: 28px;
+  letter-spacing: 3px;
+  word-spacing: 6px;
+  margin: 25px 0;
+}
+
+
+small {
+  font-size: 14px;
+  color: var(--white);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.card-back-container {
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.card-back-text {
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  color: white;
+  right: 12%;
+}
+
+.card-front-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.card-front-text {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.inline-text {
+  display: flex;
+  justify-content: space-between;
+}
+
 
 
 
