--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 :root {
   --linear-gradient: linear-gradient(hsl(249, 99%, 64%), hsl(278, 94%, 30%)); /* (active input border) */ 
   --red: hsl(0, 100%, 66%); /* (input errors) */ 
+
   --white: hsl(0, 0%, 100%);
   --light-grayish-violet: hsl(270, 3%, 87%);
   --dark-grayish-violet: hsl(279, 6%, 55%);
@@ -41,6 +42,9 @@ body {
 .card {
   position: absolute;
   border-radius: 10px;
+  width: 470px;
+  aspect-ratio: 47 / 24;
+  box-sizing: border-box;
 }
 
 .card-front {
@@ -48,9 +52,7 @@ body {
   background-size: cover;
   top: 22%;
   left: 10%;
-  padding: 30px 35px;
-  width: 400px;
-  height: 190px;
+  padding: 1.66rem 1.944rem; /* 30px 35px, you divide by 18 for rem because root font size is 18, not 16 */ 
 }
 
 .card-back {
@@ -59,8 +61,7 @@ body {
   top: 52%;
   left: 15%;
   padding: 0;
-  width: 470px;
-  height: 250px;
+
 }
 
 p {
@@ -90,8 +91,8 @@ small {
 
 .card-back-text {
   position: absolute;
-  top: 50%;
-  transform: translate(0, -50%);
+  top: 52%;
+  transform: translate(0, -48%);
   color: white;
   right: 12%;
 }
@@ -121,6 +122,7 @@ small {
 
 /* FORM */ 
 form {
+  /* display: none; */
   display: grid;
   grid-template-columns: 1fr 1fr;
   /* grid-template-rows: 1fr 1fr 1fr 1fr; */ 
@@ -157,7 +159,8 @@ form {
 }
 
 button {
-  width: 380px;
+  width: 100%;
+  max-width: 380px;
   padding: 0;
   grid-column: 1 / 3;
   border: none;
@@ -168,18 +171,16 @@ button {
   margin-top: 10px;
 }
 
-.form-completed {
-  display: none;
-}
-
 input {
-  border: 1px solid var(--dark-grayish-violet);
+  border: 1px solid var(--light-grayish-violet);
   box-sizing: border-box; /* so the input box width stays inside the parent element */ 
   width: 100%;
   margin: 7px 0 30px 0;
   border-radius: 8px;
   padding: 10px 20px;
   color: var(--very-dark-violet);
+  height: 48px;
+  box-sizing: border-box;
 }
 
 label {
@@ -189,22 +190,120 @@ label {
   color: var(--very-dark-violet);
 }
 
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
+/* Chrome, Safari, Edge, Opera - remove arrows in number input */
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-/* Firefox */
+/* Firefox - remove arrows in number input */
 input[type=number] {
   -moz-appearance: textfield;
 }
 
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: var(--light-grayish-violet);
+  opacity: 1; /* Firefox */
+}
 
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: var(--light-grayish-violet);
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: var(--light-grayish-violet);
+}
+
+
+/* Form Completed */ 
+.form-completed {
+  display: none;
+  /*display: flex;*/
+  flex-direction: column;
+  align-items: center;
+  width: 380px;
+}
+
+.form-completed p {
+  color: var(--dark-grayish-violet);
+  margin: 0 0 40px 0;
+}
+
+h1 {
+  text-transform: uppercase;
+  margin: 40px 0 15px 0;
+  letter-spacing: 5px;
+  font-size: 30px;
+  color: var(--very-dark-violet); 
+}
 
 
 /* Media Queries */ 
-@media only screen and (min-width: 1440px) {
-  
+@media only screen and (max-width: 450px) {
+  body {
+    grid-template-columns: 100%;
+    grid-template-rows: 250px calc(100% - 250px);
+    gap: 0;
+  }
+
+  .right-col {
+    background: grey;
+    padding-top: 120px;
+    box-sizing: border-box;
+  }
+
+  .left-col {
+    background: url(../images/bg-main-mobile.png);
+    background-size: cover;
+    position: relative;
+    height: 250px;
+  }
+
+  .card {
+    width: 80%;
+  }
+  .card-front {
+    top: 140px;
+    left: 20px;
+    padding: 20px 25px; 
+    z-index: 2;
+  }
+
+  .card-back {
+    top: 30px;
+    right: 20px;
+    left: unset;
+  }
+
+  p.cc-number {
+    /*font-size: 1rem;*/
+    font-size: clamp(0.7rem, 1rem, 2rem); 
+  }
+
+  small {
+    font-size: 10px;
+  }
+
+  .card-logo {
+    width: 50px;
+  }
+
+  .right-col {
+    align-items: flex-start;
+  }
+
+  form {
+    max-width: 380px;
+    width: 85%;
+  }
+
+  .form-completed {
+    max-width: 380px;
+    width: 85%;
+  }
+
+  input {
+    padding: 10px 12px;
+  }
+
 }
